@@ -1,3 +1,9 @@
+2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* tests/Makefile.am (noinst_PROGRAMS): Rename to...
+	(check_PROGRAMS): ... this.
+	(AM_CPPFLAGS): Set to $(CHECK_CPPFLAGS).
+
 2008-02-15  Neal H. Walfield  <neal@gnu.org>
 
 	* l4/math.h (_L4_lsb): Count correctly.
